--- a/all_levels/1/level1.1
+++ b/all_levels/1/level1.1
@@ -1,7 +1,7 @@
-...@............
-...*..*..*......
-...........*....
-....*.*..*......
-..*...*......***
-....*.*.........
-..*...@........o
+...........v.v..
+.........******.
+..*.....*....&..
+.....****f*****.
+....*@@@@@...&..
+..*f*f*****f***.
+.*kkkkkkkkkkkkk.
