--- a/all_levels/3/level3.1
+++ b/all_levels/3/level3.1
@@ -1,7 +1,7 @@
-...@............
-...*..*..*......
-...........*....
-....*.*..*......
-..*...*.........
-....*.*.........
-..*.......&....&
+........&......v
+.@.*f*fv*vv*&&&v
+.*.&&......*k.kv
+..**f*.....**f*v
+.....&..*..*..vv
+....f**..@*..v..
+..v*kkkvvf*...&&
