--- a/all_levels/3/level3.2
+++ b/all_levels/3/level3.2
@@ -1,7 +1,7 @@
-................
-...*..*..*......
-.........@.*....
-....*.*..*......
-..*...**********
-....*.*@@@@@@@@@
-..*@@@@@@@@@@@@@
+..........@.....
+&f*ff*f*k.f.....
+*@......*k*f*f*f
+.f***.&..*.vvv..
+.....f*..*.....*
+..&&..f@**..***.
+.*kk*..*@..&&&..
