--- a/all_levels/1/level1.2
+++ b/all_levels/1/level1.2
@@ -1,7 +1,7 @@
-................
-...*..*..*......
-.........@.*....
-....*.*..*......
-..*...**********
-....*.*@@@@@@@@@
-..*@@@@@@@@@@@@@
+...*.*..*.*&....
+.*....&....*f...
+..**k*.*........
+....*....*&@@...
+..&..&..*.*ff...
+.*..*.*.........
+.kkkkkkkkkkkkkk.
