--- a/all_levels/1/level1.3
+++ b/all_levels/1/level1.3
@@ -1,7 +1,7 @@
-................
-...*..*..*......
-.........@.*....
-....*.*..*......
-..*...**********
-....*.*.........
-..*......@@@....
+.b&....f***.....
+.f*...f.v..*...o
+.v...*&.&.&.*f**
+....*..&...&.*..
+...*.*ff*f*f*...
+..*.............
+.*kkkkkkkkkkkkkk
