--- a/all_levels/2/level2.1
+++ b/all_levels/2/level2.1
@@ -1,7 +1,7 @@
-...@............
-...*..*..*......
-...........*....
-....*.*..*......
-..*...*.........
-....*.*.........
-..*.............
+.@.........v.v..
+.*.......******.
+..*.....*....&..
+.....****f*****.
+....*@@@@@...&..
+..*f*f*********.
+.*kkkkkkkkkkkkkk
