--- a/all_levels/2/level2.3
+++ b/all_levels/2/level2.3
@@ -1,7 +1,7 @@
 ................
-...*..*..*......
-.........@.*....
-....*.*..*......
-..*...**********
-....*.*.........
-..*......@@@....
+...*....v......o
+.*..v.v.v...*f**
+..*........*....
+....*.v...*.....
+.***....&*......
+.kkkkkki*kkkkkkk
