--- a/all_levels/3/level3.3
+++ b/all_levels/3/level3.3
@@ -1,7 +1,7 @@
 k.........&&&...
-*.@@....******ff
-*kf*f*.@..k*.@@v
-**&&&.f*..*.@@v.
+v.@@....******ff
+vkf*f*.@..k*.@@v
+v*&&&.f*..*.@@v.
 .........*.@@v..
 ....f*f*...@v...
 ..*kkkkkkkk...go
